2011-02-16  Robin Cao  <robin.cao@torchmobile.com.cn>

Reviewed by James Robinson.

        PlatformContextSkia::applyAntiAliasedClipPaths does not work for paths which have evenOdd property
        https://bugs.webkit.org/show_bug.cgi?id=54336

        We need to take fill type of paths into account when drawing them.

        No new tests, covered by svg/W3C-SVG-1.1/masking-path-05-f.svg.

        * platform/graphics/skia/PlatformContextSkia.cpp:
        (WebCore::PlatformContextSkia::applyAntiAliasedClipPaths):

Canonical link: https://commits.webkit.org/68728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78751 268f45cc-cd09-0410-ab3c-d52691b4dbfc