Source/WebCore/platform/graphics/skia/PlatformContextSkia.cpp
@@ -688,7 +688,7 @@ void PlatformContextSkia::applyAntiAliasedClipPaths(WTF::Vector<SkPath>& paths)
     paint.setStyle(SkPaint::kFill_Style);
 
     for (size_t i = paths.size() - 1; i < paths.size(); --i) {
-        paths[i].setFillType(SkPath::kInverseWinding_FillType);
+        paths[i].toggleInverseFillType();
         m_canvas->drawPath(paths[i], paint);
     }
 
